--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -1,5 +1,53 @@
 <!-- side-nav.component.html -->
-<p class="category">Settings</p>
-<ul class="nav-list">
-  <li class="nav-button">Navigation 1</li>
-</ul>
+<mat-nav-list class="nav-list">
+  <a mat-list-item routerLink="/" class="nav-button">
+    <mat-icon mat-list-icon>home</mat-icon>
+    <span mat-line class="nav-button-text">Dashboard</span>
+  </a>
+  <a mat-list-item routerLink="/" class="nav-button">
+    <mat-icon mat-list-icon>list</mat-icon>
+    <span mat-line class="nav-button-text">Orders</span>
+  </a>
+  <a mat-list-item routerLink="/" class="nav-button">
+    <mat-icon mat-list-icon>sell</mat-icon>
+    <span mat-line class="nav-button-text">Products</span>
+  </a>
+  <a mat-list-item routerLink="/" class="nav-button">
+    <mat-icon mat-list-icon>folder</mat-icon>
+    <span mat-line class="nav-button-text">Categories</span>
+  </a>
+  <a mat-list-item routerLink="/" class="nav-button">
+    <mat-icon mat-list-icon>group</mat-icon>
+    <span mat-line class="nav-button-text">Customers</span>
+  </a>
+  <a mat-list-item routerLink="/" class="nav-button">
+    <mat-icon mat-list-icon>leaderboard</mat-icon>
+    <span mat-line class="nav-button-text">Reports</span>
+  </a>
+  <a mat-list-item routerLink="/" class="nav-button">
+    <mat-icon mat-list-icon>star</mat-icon>
+    <span mat-line class="nav-button-text">Coupons</span>
+  </a>
+  <a mat-list-item routerLink="/" class="nav-button">
+    <mat-icon mat-list-icon>chat</mat-icon>
+    <span mat-line class="nav-button-text">Inbox</span>
+  </a>
+  <p class="category">Other Information</p>
+  <a mat-list-item routerLink="/" class="nav-button">
+    <mat-icon mat-list-icon>help</mat-icon>
+    <span mat-line class="nav-button-text">Knowledge Base</span>
+  </a>
+  <a mat-list-item routerLink="/" class="nav-button">
+    <mat-icon mat-list-icon>workspace_premium</mat-icon>
+    <span mat-line class="nav-button-text">Product Updates</span>
+  </a>
+  <p class="category">Setting</p>
+  <a mat-list-item routerLink="/" class="nav-button">
+    <mat-icon mat-list-icon>person</mat-icon>
+    <span mat-line class="nav-button-text">Personal Settings</span>
+  </a>
+  <a mat-list-item routerLink="/" class="nav-button">
+    <mat-icon mat-list-icon>settings</mat-icon>
+    <span mat-line class="nav-button-text">Global Settings</span>
+  </a>
+</mat-nav-list>
