--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,10 +4,11 @@ $gray-100: #000; // Black
 $gray-70: #5a607f; // Dark Gray
 $gray-50: #a1a7c4; // Medium Gray
 $gray-40: #d7dbec; // Light Gray
+$gray-20: #f5f6fa; // Extra Light Gray
 
 // Primary Colors - Blue color definitions
 $blue-100: #1e5eff;
 
 // General Typography
-$title-font-family: 'Gilroy', sans-serif;
-$font-family: 'Inter', sans-serif;
+$title-font-family: "Gilroy", sans-serif;
+$font-family: "Inter", sans-serif;
