--- a/src/app/side-nav/side-nav.component.scss
+++ b/src/app/side-nav/side-nav.component.scss
@@ -11,16 +11,18 @@
   line-height: 16px;
   letter-spacing: 0px;
   text-align: left;
+  margin: 15px;
 }
 
 .nav-list {
   list-style: none;
-  padding: 0;
+  padding: 10px;
   margin: 0;
 
   .nav-button {
-    color: $gray-70;
-    font-family: $font-family;
+    display: flex; // Enables Flexbox
+    align-items: center; // Aligns items vertically in the center
+    justify-content: flex-start; // Aligns items to the start of the container horizontally
     font-size: 14px;
     font-weight: 400;
     line-height: 20px;
@@ -32,6 +34,25 @@
     &:hover {
       color: $gray-0;
       background-color: $blue-100;
+
+      mat-icon {
+        color: $gray-0;
+      }
+
+      .nav-button-text {
+        color: $gray-0;
+      }
+    }
+
+    mat-icon {
+      color: $gray-70;
+      vertical-align: middle;
+      margin-right: 15px;
+    }
+
+    .nav-button-text {
+      color: $gray-70;
+      font-family: $font-family;
     }
   }
 }
