--- a/src/app/top-menu/top-menu.component.scss
+++ b/src/app/top-menu/top-menu.component.scss
@@ -1,8 +1,13 @@
+// import colors from _variables.scss
+@use "../../styles/variables" as *;
+
 .title {
-    font-family: $title-font-family;
-    font-size: 22px;
-    font-weight: 800;
-    line-height: 31px;
-    letter-spacing: 0px;
-    text-align: left;
+  font-family: $title-font-family;
+  font-size: 22px;
+  font-weight: 800;
+  line-height: 31px;
+  letter-spacing: 0px;
+  text-align: left;
+  margin: 20px;
+  padding-left: 25px;
 }
